Chrome bug not showing images fix

--- a/css/revealer.css
+++ b/css/revealer.css
@@ -56,6 +56,7 @@
 
 @keyframes showX {
 	to {
+		opacity: 1;
 		transform: scale3d(0,1,1);
 	}
 }
@@ -81,6 +82,7 @@
 
 @keyframes showY {
 	to {
+		opacity: 1;
 		transform: scale3d(1,0,1);
 	}
 }
